# candle-nanoGPT

./: .gitignore  Cargo.toml
book/: book.toml
book/book/: 404.html  index.html  print.html
book/doc_writer/: doc_writer.py
book/doc_writer/inputs/: reading_exploring_data.rs  reading_exploring_data.txt
book/doc_writer/outputs/: reading_exploring_data.md
candle-nanogpt/: Cargo.toml
candle-nanogpt/src/: main.rs
gpt/: Cargo.toml
gpt/src/: bigram.rs  lib.rs  model.rs  modelv2.rs  self_attention_trick.rs
src/: bigram.rs  lib.rs  model.rs  modelv2.rs
train/: Cargo.toml
train/src/: main.rs
