[workspace]
members = [ "train",
    "candle-nanogpt",
]

[workspace.dependencies]
candle = { git = "https://github.com/huggingface/candle", package = "candle-core", features = ["metal"] }
candle-nn = { git = "https://github.com/huggingface/candle", package = "candle-nn", features = ["metal"] }
rand = "0.8.5"