[package]
name = "ng-tutorial"
version = "0.1.0"
edition = "2021"

[lib]
name = "utils"
path = "src/lib.rs"

[[bin]]
name = "bigram"
path = "src/bigram.rs"

[[bin]]
name = "attention"
path = "src/self_attention_trick.rs"

[[bin]]
name = "model"
path = "src/model.rs"

[[bin]]
name = "modelv2"
path = "src/modelv2.rs"

[dependencies]
anyhow = "1.0.82"
candle = { path = "../../candle/candle-core", package = "candle-core", features = ["metal"] }
candle-nn = { path = "../../candle/candle-nn", package = "candle-nn", features = ["metal"] }
rand = "0.8.5"
